--- a/src/index.html
+++ b/src/index.html
@@ -32,11 +32,11 @@
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 
   <!-- Sidebar -->
-  <link
+  <!-- <link
   rel="icon"
   href="./assets/images/kaiadmin/favicon.ico"
   type="image/x-icon"
-/>
+/> -->
 <link href="http://getbootstrap.com/javascript/" rel="stylesheet">
 <!-- Fonts and icons -->
 <script src="./assets/js/plugin/webfont/webfont.min.js"></script>
@@ -67,14 +67,13 @@
 <link rel="stylesheet" href="./assets/css/demo.css" />
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/72a2a5786c.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icofont@1.0.0/icofont.min.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <script src="https://kit.fontawesome.com/72a2a5786c.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/c157f04d92.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icofont@1.0.0/icofont.min.css">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/icofont@1.0.0/icofont.min.css">
 
 
+  <add key="webpages:Enabled" value="true" />
 
 
   <!-- style Linkss -->
@@ -96,6 +95,14 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
   
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
+<link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
+
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=https://lawersys-001-site1.etempurl.com/&callback=initMap" async defer></script> -->
+
   <app-root></app-root>
 </body>
 </html>
