--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,12 @@
 <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
 
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=https://lawersys-001-site1.etempurl.com/&callback=initMap" async defer></script> -->
-
+<link 
+  rel="stylesheet" 
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" 
+  integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMp+Z6LVbbIp2Zlw2jEEj8RVyT6sUpVv2rfcsWj" 
+  crossorigin="anonymous"
+/>
   <app-root></app-root>
 </body>
 </html>
